WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265427
[WebRTC] Release assertion in webrtc::RtpPacketizerH264::PacketizeSingleNalu on bad input
https://bugs.webkit.org/show_bug.cgi?id=265427
Summary
[WebRTC] Release assertion in webrtc::RtpPacketizerH264::PacketizeSingleNalu ...
David Kilzer (:ddkilzer)
Reported
2023-11-27 20:54:13 PST
Release assertion in webrtc::RtpPacketizerH264::PacketizeSingleNalu on bad input. This release assertion fires when invalid input is passed in to `webrtc::RtpPacketizerH264::RtpPacketizerH264()` in `Source/ThirdParty/libwebrtc/Source/webrtc/modules/rtp_rtcp/source/rtp_format_h264.cc`: ``` [...] RTC_CHECK_GT(fragment.size(), 0u); packets_.push(PacketUnit(fragment, true /* first */, true /* last */, false /* aggregated */, fragment[0])); ++num_packets_left_; return true; } ``` <
rdar://118861718
>
Attachments
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2023-11-27 21:01:27 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20972
EWS
Comment 2
2023-11-28 08:24:32 PST
Committed
271216@main
(5755e4b0e628): <
https://commits.webkit.org/271216@main
> Reviewed commits have been landed. Closing PR #20972 and removing active labels.
David Kilzer (:ddkilzer)
Comment 3
2024-01-22 20:43:04 PST
Closing this as the bug was fixed a in different way.
David Kilzer (:ddkilzer)
Comment 4
2024-01-22 20:43:49 PST
(In reply to David Kilzer (:ddkilzer) from
comment #3
)
> Closing this as the bug was fixed a in different way.
Oops, wrong bug. Resolved/Fixed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug