[WebRTC] Release assertion in webrtc::RtpPacketizerH264::PacketizeSingleNalu on bad input https://bugs.webkit.org/show_bug.cgi?id=265427 <rdar://118861718>

Reviewed by Youenn Fablet.

Change release assertion into a runtime check to avoid a crash.

* Source/ThirdParty/libwebrtc/Source/webrtc/modules/rtp_rtcp/source/rtp_format_h264.cc:
(webrtc::RtpPacketizerH264::PacketizeSingleNalu):
- Return false instead of crashing if fragment.size() == 0u.

* Source/ThirdParty/libwebrtc/WebKit/0001-WebRTC-Release-assertion-in-webrtc-RtpPacketizerH264-PacketizeSingleNalu.patch: Add.

Canonical link: https://commits.webkit.org/271216@main